tests/integration/errors/test_modifier_misplaced_private.sn
# Test: Compile error - 'private' placed after parameter list instead of before 'fn'

fn compute() private: int =>
    return 99

fn main(): void =>
    var x: int = compute()
    print($"{x}\n")
